# ecs-sd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.cluster.yml  renovate.json
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md  v0.3.0-REQUIREMENTS.md  v0.3.0-ROADMAP.md
.planning/phases/01-core-discovery-http-api/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN-01-core-infrastructure.md  01-PLAN-02-routes-handlers.md  01-PLAN-03-discovery-logic.md  01-RESEARCH.md  01-SUMMARY-01-core-infrastructure.md  01-SUMMARY-02-routes-handlers.md  01-SUMMARY-03-discovery-logic.md  01-VERIFICATION.md
.planning/phases/02-metadata-labels/: 02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-PLAN-01-core-label-infrastructure.md  02-PLAN-02-label-implementation.md  02-PLAN-03-level-configuration.md  02-RESEARCH.md  02-SUMMARY-01-core-label-infrastructure.md  02-SUMMARY-02-label-implementation.md  02-SUMMARY-03-level-configuration.md  02-VALIDATION.md
.planning/phases/03-caching-configuration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/08-metrics/: 08-SUMMARY.md
.planning/phases/09-cachesnapshot-refactor-module-cleanup/: 09-01-SUMMARY.md  09-02-SUMMARY.md  09-03-SUMMARY.md  09-REVIEW.md  09-VERIFICATION.md
.planning/phases/10-error-hardening-dependency-pinning/: 10-01-PLAN.md  10-02-PLAN.md  10-REVIEW.md  10-VERIFICATION.md
.planning/phases/11-rich-health-endpoint-k8s-probes/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-PATTERNS.md  11-RESEARCH.md  11-VALIDATION.md  11-VERIFICATION.md
.planning/phases/12-http-metrics-middleware-new-metric-families/: 12-01-PLAN.md  12-02-PLAN.md  12-03-PLAN.md  12-04-PLAN.md  12-VALIDATION.md
.planning/phases/13-config-endpoint-churn-protection/: 13-01-PLAN.md  13-02-PLAN.md
.planning/phases/14-openapi-swagger/: 14-01-PLAN.md  14-02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: api.md  cluster-mode.md  configuration.md  ops-runbook.md  proxy-mode.md  self-registration.md
src/: config.rs  error.rs  main.rs  openapi.rs  test_helpers.rs
src/aws/: client.rs  discovery.rs  mod.rs
src/cluster/: mod.rs  tests.rs
src/handlers/: config.rs  health.rs  metrics.rs  mod.rs  proxy.rs  sd.rs
src/metrics/: mod.rs  tests.rs
src/middleware/: http_metrics.rs  mod.rs
src/models/: label_builder.rs  label_filter.rs  metadata_level.rs  mod.rs  proxy_target.rs  target.rs
src/routes/: config.rs  health.rs  metrics.rs  mod.rs  proxy.rs  sd.rs
src/state/: app_state.rs  mod.rs
terraform/examples/cluster/: README.md  main.tf
terraform/modules/ecs-sd-cluster/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
