[package]
name = "ecs-sd"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.16"
aws-sdk-ecs = "1.124.0"
aws-sdk-ec2 = "1.0"
aws-sdk-sts = "1.103"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.52.2", features = ["full"] }
axum = "0.7"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
humantime = "2"
rand = "0.8"
reqwest = { version = "0.12", features = ["stream"] }
uuid = { version = "1", features = ["v5"] }
chitchat = "0.10.1"
tokio-stream = { version = "0.1", features = ["sync"] }
