[package]
name = "ecs-sd"
version = "0.5.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.16", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-ecs = { version = "=1.134.0", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-ec2 = { version = "=1.240.0", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-sts = { version = "1.103", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.52.2", features = ["full"] }
axum = "0.8"
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
humantime = "2"
prometheus = "0.14"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "stream",
] }
uuid = { version = "1", features = ["v5"] }
chitchat = "0.11.1"
tokio-stream = { version = "0.1", features = ["sync"] }
utoipa = "5.5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
aws-smithy-mocks = "0.3.0"
aws-sdk-ecs = { version = "=1.134.0", features = ["test-util"] }
aws-sdk-ec2 = { version = "=1.240.0", features = ["test-util"] }
aws-sdk-sts = { version = "1.103", features = ["test-util"] }
